--- a/front/src/app/core/slider/slider.component.styl
+++ b/front/src/app/core/slider/slider.component.styl
@@ -1,3 +1,19 @@
+.wrapper
+  height 0
+  padding-top 56.25%
+  overflow hidden
+  position relative
+  .wrapper2
+    position absolute
+    left 0
+    top 0
+    width 100%
+    height 100%
+@media screen and (min-width 1370px)
+  .wrapper
+    padding-top 25%
+
+
 .container
   width 100%
   height 100%
@@ -43,7 +59,15 @@
   width 100%
   height 100%
 
-.image
+.page
   width 100%
   height 100%
-  background-size cover
+  position relative
+  overflow hidden
+  .image
+    position absolute
+    left 50%
+    top 50%
+    transform translate(-50%, -50%)
+    object-fit cover
+
